<?xml version="1.0"?>
<package format="2">
  <name>stf</name>
  <version>0.1.0</version>
  <description>Static transform library</description>

  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/stf</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cmake_modules</depend>
  <depend>geometry_msgs</depend>
  <depend>libpcl-all</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <test_depend>rosunit</test_depend>

  <export>
  </export>
</package>
